@@ -4,7 +4,10 @@ import info.kgeorgiy.java.advanced.hello.HelloClient;
 
 import java.io.IOException;
 import java.net.*;
+import java.nio.charset.StandardCharsets;
 import java.util.concurrent.*;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 public class HelloUDPClient implements HelloClient {
     static void main(final String... args) {
@@ -21,7 +24,7 @@ public class HelloUDPClient implements HelloClient {
 
     @Override
     public void run(final String host, final int port, final String prefix, final int requests, final int threads) {
-        try (final ExecutorService executor = Executors.newThreadPerTaskExecutor(Thread.ofPlatform().factory())) {
+        try (final ExecutorService executor = Executors.newFixedThreadPool(threads)) {
             final InetAddress address;
             try {
                 address = InetAddress.getByName(host);
@@ -29,15 +32,8 @@ public class HelloUDPClient implements HelloClient {
                 throw new RuntimeException(e);
             }
 
-            try (final DatagramSocket socket = new DatagramSocket()) {
-                socket.setSoTimeout(100);
-                final CountDownLatch latch = new CountDownLatch(threads);
-                for (int thread = 1; thread <= threads; thread++) {
-                    executor.submit(getTask(port, prefix, requests, thread, address, socket, latch));
-                }
-                latch.await();
-            } catch (final SocketException | InterruptedException e) {
-                throw new RuntimeException(e);
+            for (int thread = 1; thread <= threads; thread++) {
+                executor.submit(getTask(port, prefix, requests, thread, address));
             }
         }
     }
@@ -46,27 +42,71 @@ public class HelloUDPClient implements HelloClient {
             final int port,
             final String prefix,
             final int requests,
-            final int finalThread,
-            final InetAddress address,
-            final DatagramSocket socket,
-            final CountDownLatch latch
+            final int threadNum,
+            final InetAddress address
     ) {
         return () -> {
             for (int requestNum = 1; requestNum <= requests; requestNum++) {
-                final byte[] msg = (prefix + requestNum + "_" + finalThread).getBytes();
-                final DatagramPacket request = new DatagramPacket(msg, msg.length, address, port);
-                while (true) {
-                    try {
-                        socket.send(request);
+                final byte[] msg = (prefix + requestNum + "_" + threadNum).getBytes(StandardCharsets.UTF_8);
+                try (final DatagramSocket socket = new DatagramSocket()) {
+                    socket.setSoTimeout(200);
+                    final int buffSize = socket.getReceiveBufferSize();
+                    final DatagramPacket request = new DatagramPacket(msg, msg.length, address, port);
+                    final DatagramPacket response = new DatagramPacket(new byte[buffSize], buffSize);
 
-                        final DatagramPacket response = new DatagramPacket(new byte[msg.length], msg.length);
-                        socket.receive(response);
-                        break;
-                    } catch (final IOException _) {
-                    }
+                    tryToSend(socket, request, response, threadNum, requestNum);
+                } catch (final SocketException e) {
+                    System.err.println("Can't create socket:" + e.getMessage());
                 }
             }
-            latch.countDown();
         };
+    }
+
+    private static void tryToSend(
+            final DatagramSocket socket,
+            final DatagramPacket request,
+            final DatagramPacket response,
+            final int threadNum,
+            final int requestNum
+    ) {
+        while (!Thread.interrupted() && !socket.isClosed()) {
+            try {
+                socket.send(request);
+                socket.receive(response);
+
+                final String responseMsg = new String(response.getData(), response.getOffset(), response.getLength(), StandardCharsets.UTF_8);
+                if (validate(responseMsg, requestNum, threadNum)) {
+                    break;
+                }
+            } catch (final IOException e) {
+                System.err.println("Can't send request: " + e.getMessage());
+            }
+        }
+    }
+
+    private static boolean validate(String responseMsg, final int requestNum, final int threadNum) {
+        responseMsg = reverse(responseMsg);
+        final String num1 = extractNumFromSuffix(responseMsg.chars()
+                .dropWhile(c -> !Character.isDigit(c)));
+        if (!num1.equals(reverse(String.valueOf(threadNum)))) {
+            return false;
+        }
+
+        final String num2 = extractNumFromSuffix(responseMsg.chars()
+                .dropWhile(c -> !Character.isDigit(c))
+                .dropWhile(Character::isDigit)
+                .dropWhile(c -> !Character.isDigit(c)));
+        return num2.equals(reverse(String.valueOf(requestNum)));
+    }
+
+    private static String extractNumFromSuffix(final IntStream stream) {
+        return stream.takeWhile(Character::isDigit)
+                .mapToObj(Character::getNumericValue)
+                .map(String::valueOf)
+                .collect(Collectors.joining());
+    }
+
+    private static String reverse(final String str) {
+        return new StringBuilder(str).reverse().toString();
     }
 }
